--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,9 +3,10 @@
 
 
 #name {
-  width: 60px;
-  height: 30px;
-  color: ##e68a00;
-  position: block;
+  background-color: ##e68a00; 
+  color: ##ffffff;
+  font-family: "Century Gothic";
+  padding: 10px;
+  display: block;
   margin: 700px 50px 40px 50px;
 }
