--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,7 +3,7 @@
 
 
 #name {
-  background-color: ##e68a00; 
+  background-color: #e68a00;
   color: ##ffffff;
   font-family: "Century Gothic";
   padding: 10px;
