--- a/stylesheet.css
+++ b/stylesheet.css
@@ -6,7 +6,8 @@
   background-color: #e68a00;
   color: ##ffffff;
   font-family: "Century Gothic";
+  font-size: 30px;
   padding: 10px;
   display: block;
-  margin: 700px 50px 40px 50px;
+  
 }
