--- a/stylesheet.css
+++ b/stylesheet.css
@@ -8,7 +8,7 @@
   font-family: "Century Gothic";
   font-size: 30px;
   padding: 10px;
-  margin-left: 50%;
-  margin-right: 200px;
+  margin-left: 500px;
+  margin-right: 500px;
   
 }
