--- a/stylesheet.css
+++ b/stylesheet.css
@@ -4,6 +4,7 @@
 
 #name {
   background-color: #e68a00;
+  text-align: center;
   color: ##ffffff;
   font-family: "Century Gothic";
   font-size: 30px;
