--- a/stylesheet.css
+++ b/stylesheet.css
@@ -9,7 +9,7 @@
   font-family: "Century Gothic";
   font-size: 30px;
   padding: 10px;
-  margin-left: 600px;
-  
+  margin-left: 500px;
+  margin-right: 500px;
   
 }
