--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,7 +3,7 @@
 
 
 #name {
-  
+  text-align: center;
   
 }
 
@@ -14,7 +14,7 @@ p {
   font-size: 35px;
   background-color: #e68a00;
   padding: 5px;
-  width: 100px;
+  width: 200px;
 }
 
 #footer {
