--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,12 +2,13 @@
 
 div {
   background-color: #e68a00;
-  padding: 5px;
 }
 
 #name {
   display: block;
   margin: auto;
+  width: 180px;
+  height: 45px;
   
   
 }
