--- a/stylesheet.css
+++ b/stylesheet.css
@@ -12,7 +12,7 @@ div {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  margin-bottom: 20px;
+  margin-top: 100px;
   width: 180px;
   height: 45px;
   
