--- a/stylesheet.css
+++ b/stylesheet.css
@@ -13,7 +13,7 @@ iframe {
 }
 
 div {
-  background-color: #e68a00;
+  background-color: #002b80;
 }
 
 #name {
@@ -30,7 +30,7 @@ div {
 p {
   text-align: center;
   font-family: "Century Gothic";
-  color: #ffffff;
+  color: #e68900;
   font-size: 35px;
 }
 
