--- a/stylesheet.css
+++ b/stylesheet.css
@@ -6,7 +6,7 @@ body {
 
 iframe {
   width: 80%;
-  height: 600px;
+  height: 500px;
   border-width: 0px;
   margin-left: 10%;
   margin-top: 20px;
@@ -34,9 +34,9 @@ p {
   font-size: 35px;
 }
 
-/*
+
 #footer {
-  background-color: #0059b3;
+  background-color: #66ccff;
   height: 70px;
 }
-*/
+
