--- a/stylesheet.css
+++ b/stylesheet.css
@@ -32,6 +32,13 @@ p {
   font-size: 35px;
 }
 
+li {
+  text-align: center;
+  font-size: 20px;
+  color: #e68900;
+  font-family:"Century Gothic";
+}
+
 
 #footer {
   background-color: #006666;
