--- a/stylesheet.css
+++ b/stylesheet.css
@@ -25,14 +25,14 @@ div {
   
 }
 
-p {
+h1 {
   text-align: center;
   font-family: "Century Gothic";
   color: #e68900;
   font-size: 35px;
 }
 
-li {
+p {
   text-align: center;
   font-size: 20px;
   color: #e68900;
