--- a/stylesheet.css
+++ b/stylesheet.css
@@ -48,8 +48,8 @@ p {
 
 #footer {
   background-color: #006666;
-  bottom: 0px;
-  height: 70px;
+  bottom: 0;
+  width: 100%;
   position: fixed;
 }
 
