--- a/stylesheet.css
+++ b/stylesheet.css
@@ -16,10 +16,11 @@ div {
 }
 
 #name {
+  position: fixed;
+  top: 150;
   display: block;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 30px;
   width: 180px;
   height: 45px;
   
