--- a/stylesheet.css
+++ b/stylesheet.css
@@ -17,10 +17,11 @@ div {
 
 #name {
   position: fixed;
-  top: 150;
+  top: 400;
   display: block;
   margin-left: auto;
   margin-right: auto;
+  text-align:center;
   width: 180px;
   height: 45px;
   
