--- a/stylesheet.css
+++ b/stylesheet.css
@@ -14,7 +14,7 @@ iframe {
 div {
 
 }
-
+/*
 #name {
   position: fixed;
   top: 400;
@@ -25,8 +25,8 @@ div {
   width: 180px;
   height: 45px;
   
-  
 }
+*/
 
 h1 {
   text-align: center;
