--- a/stylesheet.css
+++ b/stylesheet.css
@@ -29,11 +29,13 @@ div {
 */
 
 h1 {
+  position: relative;
+  margin-top: 70px;
   text-align: center;
   font-family: "Century Gothic";
   color: #e68900;
   font-size: 35px;
-  margin-top: 120px;
+  
 }
 
 p {
