--- a/stylesheet.css
+++ b/stylesheet.css
@@ -38,7 +38,7 @@ h1 {
 }
 
 a {
-  color: #e68900;
+  color: #268389;
 }
 
 p {
@@ -46,7 +46,7 @@ p {
   margin-top: 50px;
   text-align: center;
   font-size: 20px;
-  color: #e68900;
+  color: #268389;
   font-family:"Century Gothic";
 }
 
